Prevent invisible tooltip from blocking in edit mode

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -41,6 +41,7 @@ body {
     width: 250px;
     height: 250px;
     z-index: 1000;
+    pointer-events: none;
 }
 
 circle {
